bindings/c/include/xtreme3d.h

/* camera.pas */
__declspec(dllimport) double CameraCreate(double);
/* dummycube.pas */
__declspec(dllimport) double DummycubeCreate(double);
/* engine.pas */
__declspec(dllimport) double EngineCreate(void);
/* light.pas */
__declspec(dllimport) double LightCreate(double, double);
/* material.pas */
__declspec(dllimport) double MaterialLibraryCreate(void);
__declspec(dllimport) double MaterialLibraryActivate(double);
__declspec(dllimport) double MaterialCreate(char*, char*);
__declspec(dllimport) double ObjectSetPosition(double, double, double, double);
__declspec(dllimport) double ObjectSetMaterial(double, char*);
__declspec(dllimport) double ObjectTurn(double, double);
/* primitives.pas */
__declspec(dllimport) double CubeCreate(double, double, double, double);
/* viewer.pas */
__declspec(dllimport) double ViewerCreate(double, double, double, double, double);
__declspec(dllimport) double ViewerSetCamera(double, double);
__declspec(dllimport) double ViewerRender(double);
__declspec(dllimport) double ViewerSetBackgroundColor(double, double);
__declspec(dllimport) double ViewerSetAntiAliasing(double, double);
/* window.pas */
__declspec(dllimport) double WindowCreate(double, double, double, double, double);
__declspec(dllimport) double WindowCenter(double);